--- a/prayerbook/Main.storyboard
+++ b/prayerbook/Main.storyboard
@@ -203,14 +203,14 @@
         <scene sceneID="Zs1-97-Vp3">
             <objects>
                 <tabBarController definesPresentationContext="YES" id="G5G-CB-Hhd" sceneMemberID="viewController">
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="xRW-dh-1Of">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="GZg-fV-JaH" kind="relationship" relationship="viewControllers" id="htI-PC-Ler"/>
+                        <segue destination="G84-hy-s0A" kind="relationship" relationship="viewControllers" id="qNS-s5-nHR"/>
                         <segue destination="x5e-qi-gb8" kind="relationship" relationship="viewControllers" id="CHQ-Gv-esh"/>
                         <segue destination="SsX-Q4-dMs" kind="relationship" relationship="viewControllers" id="488-PD-bzI"/>
                         <segue destination="0X5-7L-jSp" kind="relationship" relationship="viewControllers" id="KMH-VO-Olm"/>
@@ -220,50 +220,94 @@
             </objects>
             <point key="canvasLocation" x="-2388" y="-767"/>
         </scene>
-        <!--Table View Controller - Root View Controller-->
-        <scene sceneID="fcM-AY-Dcz">
+        <!--Daily View Controller-->
+        <scene sceneID="edj-AU-hVs">
             <objects>
-                <tableViewController id="Msc-4r-791" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="yqw-Px-lIq">
+                <viewController id="2oD-Mq-Jdq" customClass="DailyViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uye-Jf-A1I"/>
+                        <viewControllerLayoutGuide type="bottom" id="5NU-4u-iQJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xhR-Yd-2df">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Четверг 11 сентября 2014 г" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXH-NP-f0d">
+                                <rect key="frame" x="22" y="85" width="724" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Ept-a9-Ynu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Седмица X по пятидесятнице глас 1й скоро будет праздник Рождества Богородицы" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="100" translatesAutoresizingMaskIntoConstraints="NO" id="3Xh-eN-mJQ">
+                                <rect key="frame" x="46" y="170" width="100" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V8Z-iW-tsi">
+                                <rect key="frame" x="647" y="161" width="64" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="KaT-X4-YCX"/>
+                                    <constraint firstAttribute="width" constant="64" id="U0I-NX-yq6"/>
+                                </constraints>
+                                <inset key="contentEdgeInsets" minX="5" minY="0.0" maxX="1" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="2" minY="5" maxX="5" maxY="5"/>
+                                <state key="normal" image="food-vegetarian.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Vegetarian" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYZ-41-dYZ">
+                                <rect key="frame" x="611" y="243" width="81" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="b1b-lE-LKT">
+                                <rect key="frame" x="58" y="314" width="665" height="517"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="2oD-Mq-Jdq" id="idd-Bc-pri"/>
+                                    <outlet property="delegate" destination="2oD-Mq-Jdq" id="uXM-E1-DLI"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="awI-nX-wbU">
-                                <rect key="frame" x="0.0" y="86" width="768" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="awI-nX-wbU" id="7hs-WJ-Goy">
-                                    <rect key="frame" x="0.0" y="0.0" width="768" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="Msc-4r-791" id="iVp-d3-a2A"/>
-                            <outlet property="delegate" destination="Msc-4r-791" id="YJu-6j-hof"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="OL3-bg-Drt"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="p28-me-gIT" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-526" y="-1029"/>
-        </scene>
-        <!--Navigation Controller - Daily-->
-        <scene sceneID="Lf7-Mf-5DJ">
-            <objects>
-                <navigationController definesPresentationContext="YES" id="GZg-fV-JaH" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Daily" image="daily.png" id="zNz-eK-0rL"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4Kk-ZE-5Kz">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
+                        <constraints>
+                            <constraint firstItem="KYZ-41-dYZ" firstAttribute="top" secondItem="V8Z-iW-tsi" secondAttribute="bottom" constant="10" id="1kh-2U-qRm"/>
+                            <constraint firstItem="V8Z-iW-tsi" firstAttribute="top" secondItem="LXH-NP-f0d" secondAttribute="bottom" constant="10" id="6Dg-uL-p6Y"/>
+                            <constraint firstItem="LXH-NP-f0d" firstAttribute="top" secondItem="uye-Jf-A1I" secondAttribute="bottom" constant="20" symbolic="YES" id="9BI-LN-SaX"/>
+                            <constraint firstItem="5NU-4u-iQJ" firstAttribute="top" secondItem="b1b-lE-LKT" secondAttribute="bottom" constant="20" symbolic="YES" id="Hs4-Lo-dOY"/>
+                            <constraint firstItem="b1b-lE-LKT" firstAttribute="top" secondItem="KYZ-41-dYZ" secondAttribute="bottom" priority="250" constant="10" id="Sjw-GD-dy4"/>
+                            <constraint firstItem="3Xh-eN-mJQ" firstAttribute="leading" secondItem="xhR-Yd-2df" secondAttribute="leading" constant="20" symbolic="YES" id="cZ3-hm-nUz"/>
+                            <constraint firstItem="3Xh-eN-mJQ" firstAttribute="top" secondItem="LXH-NP-f0d" secondAttribute="bottom" constant="10" id="eCv-WR-iRI"/>
+                            <constraint firstItem="KYZ-41-dYZ" firstAttribute="leading" secondItem="3Xh-eN-mJQ" secondAttribute="trailing" constant="10" id="faA-pN-lOr"/>
+                            <constraint firstItem="b1b-lE-LKT" firstAttribute="leading" secondItem="xhR-Yd-2df" secondAttribute="leading" constant="20" symbolic="YES" id="i0j-CV-wJr"/>
+                            <constraint firstItem="b1b-lE-LKT" firstAttribute="top" secondItem="3Xh-eN-mJQ" secondAttribute="bottom" priority="250" constant="10" id="jQ3-G0-bxm"/>
+                            <constraint firstAttribute="trailing" secondItem="LXH-NP-f0d" secondAttribute="trailing" constant="20" symbolic="YES" id="rrc-ey-Xee"/>
+                            <constraint firstItem="KYZ-41-dYZ" firstAttribute="trailing" secondItem="V8Z-iW-tsi" secondAttribute="trailing" id="s5U-1W-5Pt"/>
+                            <constraint firstAttribute="trailing" secondItem="b1b-lE-LKT" secondAttribute="trailing" constant="20" symbolic="YES" id="uPr-9m-qZ1"/>
+                            <constraint firstItem="LXH-NP-f0d" firstAttribute="leading" secondItem="xhR-Yd-2df" secondAttribute="leading" constant="20" symbolic="YES" id="uvj-ev-Gav"/>
+                            <constraint firstAttribute="trailing" secondItem="V8Z-iW-tsi" secondAttribute="trailing" constant="20" symbolic="YES" id="z31-kt-OCZ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="JiD-rY-ey3"/>
                     <connections>
-                        <segue destination="Msc-4r-791" kind="relationship" relationship="rootViewController" id="pG3-ki-UaP"/>
+                        <outlet property="dateLabel" destination="LXH-NP-f0d" id="lG5-b8-97O"/>
+                        <outlet property="foodButton" destination="V8Z-iW-tsi" id="5dT-Tx-5JR"/>
+                        <outlet property="foodLabel" destination="KYZ-41-dYZ" id="xNF-z1-8c2"/>
+                        <outlet property="infoLabel" destination="3Xh-eN-mJQ" id="t0M-ih-cz2"/>
+                        <outlet property="tableView" destination="b1b-lE-LKT" id="IfN-ep-6hg"/>
                     </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LzI-sP-lMg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EQN-rs-m7O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1462" y="-1020"/>
+            <point key="canvasLocation" x="-477" y="-2172"/>
         </scene>
         <!--Table View Controller - Root View Controller-->
         <scene sceneID="fE8-SV-o0n">
@@ -350,7 +394,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PrC-S0-wjr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2569" y="866"/>
+            <point key="canvasLocation" x="-497" y="-1006"/>
         </scene>
         <!--Navigation Controller - Library-->
         <scene sceneID="BwA-TN-JYu">
@@ -366,7 +410,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="srx-gj-ZIz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3549" y="866"/>
+            <point key="canvasLocation" x="-1453" y="-1030"/>
         </scene>
         <!--Navigation Controller - Prayers-->
         <scene sceneID="dCu-sf-oj4">
@@ -433,12 +477,50 @@
             </objects>
             <point key="canvasLocation" x="3047" y="-1020"/>
         </scene>
+        <!--Navigation Controller - Daily-->
+        <scene sceneID="o8U-9Z-h5E">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="G84-hy-s0A" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Daily" image="daily.png" id="gXv-Zf-1Wo"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="unx-wi-BpH">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2oD-Mq-Jdq" kind="relationship" relationship="rootViewController" id="KLx-a7-7JL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S4e-fy-YBX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1455" y="-2152"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="19E-9Y-vF3">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="oqZ-aQ-yN1" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PEx-7O-6nY"/>
+                        <viewControllerLayoutGuide type="bottom" id="Bbx-zO-bcJ"/>
+                    </layoutGuides>
+                    <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="AGt-YU-1eX">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BBs-sE-817" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
     </scenes>
     <resources>
         <image name="CN.png" width="24" height="16"/>
         <image name="US.png" width="24" height="16"/>
         <image name="communion.png" width="30" height="30"/>
         <image name="daily.png" width="30" height="30"/>
+        <image name="food-vegetarian.png" width="64" height="64"/>
         <image name="group.png" width="30" height="30"/>
         <image name="library.png" width="30" height="30"/>
         <image name="options.png" width="25" height="25"/>
@@ -449,6 +531,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="fNq-2R-YfY"/>
+        <segue reference="eyG-hY-K0D"/>
     </inferredMetricsTieBreakers>
 </document>
